--- a/ms/modelDescriptions.Rmd
+++ b/ms/modelDescriptions.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "PSHB Models"
 output: html_document
-date: "2023-11-21"
+date: '`r format(Sys.Date(), "%d/%m/%Y")`'
 ---
 
 ```{r setup, include=FALSE}
@@ -30,37 +30,105 @@ We measure time, $t$, in degree.days, so can re-scale our results back to the ab
 
 #### Within host dynamics
 
-Within a single host, and using the same state variables above we would have:
+Within a single host (i.e. ignoring $x$), and using the same state variables above we would have:
 
 \begin{align}
-J(t+1) &= J(t) + fA(t) - \alpha_JJ(t) - \delta_JJ(t) \\
-P(t+1) &= P(t) + \alpha_JJ(t) - \alpha_PP(t) \\
-A(t+1) &= A(t) + \alpha_P(1-\mu)P(t) - \delta_AA(t).
+J(t+1) &= \phi_J(1-\alpha_J)J(t) + 0 + fA(t) \\
+P(t+1) &= \phi_J\alpha_JJ(t) + \phi_P(1-\alpha_P)(1-\mu)P(t) + 0 \\
+A(t+1) &= 0 + \phi_P\alpha_P(1-\mu)P(t) + \phi_AA(t).
 \end{align}
 
 Where:
 
   * $f$ is the mean fecundity of a female in the population in an interval of time
   * $\alpha_i$ are transition probabilities, describing transition between states
-  * $\delta_i$ are transition probabilities, describing transition to the dead state
+  * $\phi_i$ are survival probabilities, describing probability of surviving an interval of time in each state
   * $\mu$ is the probability of dispersing away from the host tree
 
-In matrix form, we first define the vector $\mathbf{N} = \{J, P, A\}$.  Then we have:
+In matrix form, we first define the column vector $\mathbf{n} = \{J, P, A\}$.  Then we have:
 
 $$
 \begin{gather}
- \mathbf{N}(t+1) = 
+ \mathbf{n}(t+1) = 
   \begin{bmatrix}
-  (1-\alpha_J-\delta_j) & 0 & f \\
-  \alpha_J & (1-\alpha_P) & 0 \\
-  0 & \alpha_P(1-\mu) & (1-\delta_A)
+   \phi_J(1-\alpha_J) & 0 & f \\
+   \phi_J\alpha_J & \phi_P(1-\alpha_P)(1-\mu) & 0 \\
+   0 & \phi_P\alpha_P(1-\mu) & \phi_A
   \end{bmatrix}
- \mathbf{N}(t)
+ \mathbf{n}(t)
 \end{gather}
 $$
 
+The matrix shown is the within-population transition matrix, $\mathbf{W}$.
+
+Note also that in the within-host model, we neglect to account for the arrival of pre-adults from other hosts.  This is ok if we assume that they are a very small contribution relative to within host growth.
+
+Note that there is no density dependence in the model for now.  The obvious place to put this would be on $\phi_J$.  That is, we could make $\phi_J$ some negative function of total number of juveniles produced in the host.  Something like,
+
+$$
+\phi_J(t, x) = e^{-b(x)\sum_t{fA(t)}}.
+$$
+
+Which allows each host to have its own 'carrying capacity'.  Perhaps simpler would be a threshold such that,
+
+$$
+\begin{gather}
+  \phi_J(t, x) = 
+  \begin{cases}
+    \phi_J & \text{if } \sum_t{fA(t, x)} < C(x) \\
+    0 & \text{if } \sum_t{fA(t, x)} > C(x)
+  \end{cases}
+\end{gather}
+$$
+Here, each host could have its own threshold, $C(x)$, for production of beetles.  Beyond this threshold, the host dies and $\phi_J$ collapses to 0.
 
 
-Note that there is no density dependence at this stage.  The obvious place to put this would be on $\delta_J$.  That is, we could make $\delta_J$ some positive function of total number of adults produced in the host.
+#### Between host dynamics
 
-### Between host dynamics
+We now seek to extend the model to space, to capture dynamics across multiple hosts.  To do this, we need to describe dispersal dynamics.  We assume that $\mu P(t, x)$ leave each host at each time period.  We might further assume that there is some survival rate associated with dispersing between hosts and establishing a new gallery.  Let's call that $\phi_\mu$.  Thus, the number of effective dispersers from a given host at a given time is: $\phi_\mu\mu P(t, x)$.
+
+We will make this model spatially explicit.  So the probability of arriving at a given host will depend on the distance between source and recipient host, let us call that distance, $d_{xy}$, the distance between host $x$ and host $y$.  We can imagine a pairwise distance matrix, $\mathbf{D}$, which is an $h\times h$ matrix, where $h$ is the total number of hosts. The probability of moving to a given host, is given by a 2-dimensional dispersal kernel, $k(d_{ij})$.  There are a large number of possible functions we could use for $k()$; let us leave it general for now.
+
+It is tempting at this stage to specify dispersal as a stochastic process.  The reason for this is that without stochasticity we can have fractions of individuals arriving at sites and growing; we would need to control this in some way.  With stochasticity, we can arrange things to only have integer values of immigrants.  For example, we might examine the fate of migrants from host $y$.  These will disperse to other locations, $x\neq y$ in proportion to the distances between sites as defined by the kernel, $k(d_y)$ where $d_y$ is the vector of distances between $y$ and all other sites.  We can draw the realised number of dispersers arriving to each site, $x$ as,
+
+$$
+\mathbf{m_y} \sim \text{Multinom}(m_y, k(d_y))
+$$
+where $m_y$ is the realised number of migrants emerging from site $y$:
+
+$$
+m_y \sim \text{Binom}(P(t, y), \phi_\mu\mu).
+$$
+
+We can get away with this without further adjustments to the within-host matrix, because we assume that it is survival during dispersal that introduces the stochastic element here.
+
+By stepping through all sites, $y$, we arrive at a realised dispersal matrix, $\mathbf{M}$.  And the realised number of immigrants arriving at site $x$ is then the vector given by the row sums of $\mathbf{M}$: $\mathbf{m_+} = \sum_y \mathbf m_y$.
+
+### Within and between host model
+
+So, now we need to bring this all together.  First step is to re-define the poopulation vector as $\mathbf{n} = \{\mathbf{n_1}, ..., \mathbf{n_h} \} =  \{J_1, P_1, A_1, J_2, P_2, A_2, ..., J_h, P_h, A_h,\}$, thus now containing all individuals at all stages across all the hosts in the population.
+
+We then define the $h \times h$ block matrix, $\mathbf{T}$:
+
+$$
+\mathbf{T} = 
+ \begin{bmatrix}
+  \mathbf{W} & 0  & 0 \\
+  0 & \ddots & 0 \\
+  0 & 0 & \mathbf{W}
+ \end{bmatrix}.
+$$
+Here each $0$ denotes a $3\times 3$ matrix of zeroes, and $\mathbf{W}$ is the within-host transition matrix.
+
+Normally, we would place dispersal into the off-diagonal elements of this matrix, but we have made dispersal stochastic, so easier to leave it out.  Instead, we then need to get $\mathbf m_+$ into the same length as our redefined $\mathbf{n}$.  So we define a new vector,
+
+$$
+\mathbf{m} = \{0, 0, \mathbf{m_{+1}}, 0, 0, \mathbf{m_{+2}}, ..., 0, 0, \mathbf{m_{+h}} \}
+$$
+Our final model then becomes:
+
+$$
+\begin{gather}
+ \mathbf{n}(t+1) = \mathbf{T}\mathbf{n}(t) + \mathbf{m}(t).
+\end{gather}
+$$
