--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -12,7 +12,8 @@
   issn = {0021-8901},
   doi = {10.2307/2402197},
   urldate = {2024-01-30},
-  abstract = {(1) The temperature requirements of some aphids differ from place to place for the same species and from species to species. (2) The temperature requirements of the parasites and hyperparasites associated with these aphids differ in a similar manner but, as a rule, are higher than those of their hosts. (3) It is suggested that a thermal constant higher for the parasite than for the host is advantageous to the parasite.}
+  abstract = {(1) The temperature requirements of some aphids differ from place to place for the same species and from species to species. (2) The temperature requirements of the parasites and hyperparasites associated with these aphids differ in a similar manner but, as a rule, are higher than those of their hosts. (3) It is suggested that a thermal constant higher for the parasite than for the host is advantageous to the parasite.},
+  file = {/Users/293003c/Zotero/storage/CFWNLIV4/Campbell et al. - 1974 - Temperature Requirements of Some Aphids and Their .pdf}
 }
 
 @phdthesis{dodge2019,
@@ -21,6 +22,25 @@
   year = {2019},
   school = {University of California Riverside},
   file = {/Users/293003c/Zotero/storage/IBCRYBTA/Biology_of_Two_Invasive_Ambros.pdf}
+}
+
+@article{fand2021,
+  title = {Degree Day-Based Model Predicts Pink Bollworm Phenology across Geographical Locations of Subtropics and Semi-Arid Tropics of {{India}}},
+  author = {Fand, Babasaheb B. and Nagrare, V. S. and Bal, S. K. and Naik, V. Chinna Babu and Naikwadi, B. V. and Mahule, D. J. and {Gokte-Narkhedkar}, Nandini and Waghmare, V. N.},
+  year = {2021},
+  month = jan,
+  journal = {Scientific Reports},
+  volume = {11},
+  number = {1},
+  pages = {436},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-020-80184-6},
+  urldate = {2024-01-31},
+  abstract = {There is a global concern about the effects of climate change driven shifts in species phenology on crop pests. Using geographically and temporally extensive data set of moth trap catches and temperatures across the cotton growing states of India, we predicted the phenology of cotton pink bollworm Pectinophora gossypiella (Saunders). Our approach was centered on growing degree days (GDD), a measure of thermal accumulation that provides a mechanistic link between climate change and species' phenology. The phenology change was predicted by calculating absolute error associated with DD and ordinal date, an alternative predictor of phenology, for peak moth abundance. Our results show that GDD outperformed the ordinal dates in predicting peak moth abundance in 6 out of 10 selected locations. Using established thresholds of 13.0/34.0~{\textdegree}C, mean DD accumulated between the consecutive moth peaks across different years were estimated at 504.05\,{$\pm$}\,4.84. Seven generations were determined for pink bollworm in a cropping season, the length of which varied between 35 and 73~days in response to temperature. Pink bollworm population reached its peak during third generation which can be the target for management actions. The study provides essential information for developing pink bollworm management strategies under climate change.},
+  copyright = {2021 The Author(s)},
+  langid = {english},
+  keywords = {Agroecology,Animal behaviour,Behavioural ecology,Climate-change ecology,Ecological modelling,Ecology,Entomology,Population dynamics}
 }
 
 @article{fujiwara2017,
