--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -104,6 +104,20 @@
   file = {/Users/293003c/Zotero/storage/E2KSGEML/Rosenbaum et al. - 2019 - Estimating Parameters From Multiple Time Series of.pdf;/Users/293003c/Zotero/storage/G4FVTQPQ/full.html}
 }
 
+@article{studens2023,
+  title = {Predicting the {{Temperature-Driven Development}} of {{Stage-Structured Insect Populations}} with a {{Bayesian Hierarchical Model}}},
+  author = {Studens, Kala and Bolker, Benjamin M. and Candau, Jean-No{\"e}l},
+  year = {2023},
+  month = nov,
+  journal = {Journal of Agricultural, Biological and Environmental Statistics},
+  issn = {1537-2693},
+  doi = {10.1007/s13253-023-00581-y},
+  urldate = {2024-01-31},
+  abstract = {The management of forest pests relies on an accurate understanding of the species' phenology. Thermal performance curves (TPCs) have traditionally been used to model insect phenology. Many such models have been proposed and fitted to data from both wild and laboratory-reared populations. Using Hamiltonian Monte Carlo for estimation, we implement and fit an individual-level, Bayesian hierarchical model of insect development to the observed larval stage durations of a population reared in a laboratory at constant temperatures. This hierarchical model handles interval censoring and temperature transfers between two constant temperatures during rearing. It also incorporates individual variation, quadratic variation in development rates across insects' larval stages, and ``flexibility'' parameters that allow for deviations from a parametric TPC. Using a Bayesian method ensures a proper propagation of parameter uncertainty into predictions and provides insights into the model at hand. The model is applied to a population of eastern spruce budworm (Choristoneura fumiferana) reared at 7 constant temperatures. Resulting posterior distributions can be incorporated into a workflow that provides prediction intervals for the timing of life stages under different temperature regimes. We provide a basic example for the spruce budworm using a year of hourly temperature data from Timmins, Ontario, Canada. Supplementary materials accompanying this paper appear on-line.},
+  langid = {english},
+  file = {/Users/293003c/Zotero/storage/GGJQ5RTU/Studens et al. - 2023 - Predicting the Temperature-Driven Development of S.pdf}
+}
+
 @article{umeda2019,
   title = {Temperature Can Limit the Invasion Range of the Ambrosia Beetle {{Euwallacea}} Nr. Fornicatus},
   author = {Umeda, Colin and Paine, Timothy},
