--- a/ms/modelDescriptions.Rmd
+++ b/ms/modelDescriptions.Rmd
@@ -7,6 +7,7 @@ bibliography: 'PSHBRefs.bib'
 
 ```{r setup, include=FALSE} 
 knitr::opts_chunk$set(echo=TRUE)
+options(scipen = 10, digits = 2)
 ```
 
 ## Basic life history
@@ -27,7 +28,7 @@ The life history suggests we might profitably partition the population of female
   * $P(t,x)$, the pre-adult stage (the dispersal phase): dispersal, with some mortality 
   * $A(t,x)$, the adult stage (breeding females): no dispersal, mortality through senescence.
 
-We measure time, $t$, in degree.days, so can re-scale our results back to the absolute time *post hoc*. We discretise time into small pieces relative to the time scale of the life history. We could choose something like a time interval being 44 degree hours (24h \@ 20 degrees), for example. We also partition our population among host trees, $x$.
+We measure time, $t$, in days. We also partition our population among host trees, $x$.
 
 #### Within host dynamics
 
@@ -42,12 +43,12 @@ A(t+1) &= 0 + \phi_P\alpha_P(1-\mu)P(t) + \phi_AA(t)
 
 Where:
 
-  * $f$ is the mean fecundity of a female in the population in an interval of time 
-  * $\alpha_i$ are transition probabilities, describing transition between states
-  * $\phi_i$ are survival probabilities, describing probability of surviving an interval of time in each state 
-  * $\mu$ is the probability of dispersing away from the host tree.
+  * $f(t)$ is the mean fecundity of a female in the population in an interval of time 
+  * $\alpha_i(t)$ are transition probabilities, describing transition between states
+  * $\phi_i(t)$ are survival probabilities, describing probability of surviving an interval of time in each state 
+  * $\mu(t)$ is the probability of dispersing away from the host tree.
 
-In matrix form, we first define the column vector $\mathbf{n}= \{J, P, A\}$. Then we have:
+Although we drop the notation, all these are functions of time, to capture the effect of temperature on the vital rates.  In matrix form, we first define the column vector $\mathbf{n}= \{J, P, A\}$. Then we have:
 
 $$
 \begin{gather}
@@ -83,7 +84,7 @@ $$
 \end{gather}
 $$ 
 
-Here, each host could have its own threshold, $C(x)$, for production of beetles. Beyond this threshold, the host dies and $\phi_J$ collapses to 0.
+Here, each host could have its own threshold, $C(x)$, for production of beetles. Beyond this threshold, the host resource is used up and $\phi_J$ collapses to 0.
 
 #### Between host dynamics
 
@@ -135,16 +136,17 @@ $$
 $$
 ## Estimating life-history parameters
 
+### Transition probabilities
+
 ```{r parameterSet, echo=FALSE}
 delta_t <- 20
-dodge <- 318
-umeda <- 398
+wal_juv <- 266
+wal_pre <- 136
 ```
 
 Several sources have estimated the 'thermal constant', $K$ for PSHB and related species.  $K$ is the cumulative number of degree days above some minimum temperature that it takes for development to complete.  So, if the minimum temperature is 15 degrees and we have a day where the mean temperature is 20 degrees, then we have accumulated 5 degree days towards development.  This is what is meant by $K$.
 
-Let us now fix our time interval to be `r delta_t`` degree days.  There are several references we can use here to get estimates of some of our parameters. The results for $K$ are nicely summarised in @dodge2019.
-
+The results for $K$ in *Euwallacea* are nicely summarised in @dodge2019.
 
 | Species | $T_{min}$ | $T_{opt}$ | $T_{max}$ | $K$ | Reference |
 |:--:|:--:|:--:|:--:|:--:|:--:|
@@ -152,5 +154,24 @@ Let us now fix our time interval to be `r delta_t`` degree days.  There are seve
 | PSHB | 13.34 | 27.51 | 33.08 | 398 | @umeda2019 |
 | KSHB | 12.77 | 28.04 | 31.99 | 318 | @dodge2019 |
 
+Note Dodge's estimate is for (nearly) the full life cycle from egg to emergent adult (*i.e.*, $\alpha_J\alpha_P$). Umeda's estimate is for the transition from juvenile to pre-adult (*i.e.*, $\alpha_J$).  Walgama's estimate is for the full life-cycle.  Dodge and Walgama's studies are best, and Walgama's gives the clearest breakdown of rates.
+
+Following Walgama's table 3, we get juvenile to pre-adult taking 266 degree days with a mean developmental threshold of 14.7 days.  They also estimate the pre-adult period to last 136 degree days, using a 15 degree threshold temperature.  Let us use these values for now.
+
+Let us now fix our time interval to be `r delta_t` degree days.  Under this discretisation, the rate of transition from egg to pre-adult would be `r delta_t`/`r wal_juv` = `r juv_rate <- delta_t/wal_juv; juv_rate`.  Switching this to a probability in this interval of temp.time yields,
+
+$$
+\alpha_J = `r 1-exp(-juv_rate)`.
+$$
+Following similar logic we get the rate for the pre-adult to adult transition as `r pre_rate <- delta_t/wal_pre; pre_rate`, giving us:
+
+$$
+\alpha_P = `r 1-exp(-pre_rate)`.
+$$
+
+### Survival probabilities
+
+Survival probability is also clearly temperature dependent.  There is no obvious way to link survival to an axis based on degree.days.  Oops..
 
 
+## References
