Parameter values and functions defined

--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -1,3 +1,22 @@
+@article{abarca2024,
+  title = {How Development and Survival Combine to Determine the Thermal Sensitivity of Insects},
+  author = {Abarca, Mariana and Parker, Anna L. and Larsen, Elise A. and Umbanhowar, James and Earl, Chandra and Guralnick, Robert and Kingsolver, Joel and Ries, Leslie},
+  year = {2024},
+  month = jan,
+  journal = {PLOS ONE},
+  volume = {19},
+  number = {1},
+  pages = {e0291393},
+  publisher = {{Public Library of Science}},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0291393},
+  urldate = {2024-02-01},
+  abstract = {Thermal performance curves (TPCs) depict variation in vital rates in response to temperature and have been an important tool to understand ecological and evolutionary constraints on the thermal sensitivity of ectotherms. TPCs allow for the calculation of indicators of thermal tolerance, such as minimum, optimum, and maximum temperatures that allow for a given metabolic function. However, these indicators are computed using only responses from surviving individuals, which can lead to underestimation of deleterious effects of thermal stress, particularly at high temperatures. Here, we advocate for an integrative framework for assessing thermal sensitivity, which combines both vital rates and survival probabilities, and focuses on the temperature interval that allows for population persistence. Using a collated data set of Lepidopteran development rate and survival measured on the same individuals, we show that development rate is generally limiting at low temperatures, while survival is limiting at high temperatures. We also uncover differences between life stages and across latitudes, with extended survival at lower temperatures in temperate regions. Our combined performance metric demonstrates similar thermal breadth in temperate and tropical individuals, an effect that only emerges from integration of both development and survival trends. We discuss the benefits of using this framework in future predictive and management contexts.},
+  langid = {english},
+  keywords = {Insects,Latitude,Moths and butterflies,Phylogenetic analysis,Phylogenetics,Protein metabolism,Pupae,Thermal stresses},
+  file = {/Users/293003c/Zotero/storage/MA9M463Z/Abarca et al. - 2024 - How development and survival combine to determine .pdf}
+}
+
 @article{campbell1974,
   title = {Temperature {{Requirements}} of {{Some Aphids}} and {{Their Parasites}}},
   author = {Campbell, A. and Frazer, B. D. and Gilbert, N. and Gutierrez, A. P. and Mackauer, M.},
