First test of calibration between microclimate soil temps and tree temp data

--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -59,7 +59,8 @@
   abstract = {There is a global concern about the effects of climate change driven shifts in species phenology on crop pests. Using geographically and temporally extensive data set of moth trap catches and temperatures across the cotton growing states of India, we predicted the phenology of cotton pink bollworm Pectinophora gossypiella (Saunders). Our approach was centered on growing degree days (GDD), a measure of thermal accumulation that provides a mechanistic link between climate change and species' phenology. The phenology change was predicted by calculating absolute error associated with DD and ordinal date, an alternative predictor of phenology, for peak moth abundance. Our results show that GDD outperformed the ordinal dates in predicting peak moth abundance in 6 out of 10 selected locations. Using established thresholds of 13.0/34.0~{\textdegree}C, mean DD accumulated between the consecutive moth peaks across different years were estimated at 504.05\,{$\pm$}\,4.84. Seven generations were determined for pink bollworm in a cropping season, the length of which varied between 35 and 73~days in response to temperature. Pink bollworm population reached its peak during third generation which can be the target for management actions. The study provides essential information for developing pink bollworm management strategies under climate change.},
   copyright = {2021 The Author(s)},
   langid = {english},
-  keywords = {Agroecology,Animal behaviour,Behavioural ecology,Climate-change ecology,Ecological modelling,Ecology,Entomology,Population dynamics}
+  keywords = {Agroecology,Animal behaviour,Behavioural ecology,Climate-change ecology,Ecological modelling,Ecology,Entomology,Population dynamics},
+  file = {/Users/293003c/Zotero/storage/ZG9Z9GWZ/Fand et al. - 2021 - Degree day-based model predicts pink bollworm phen.pdf}
 }
 
 @article{fujiwara2017,
