--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -107,6 +107,24 @@
   file = {/Users/293003c/Zotero/storage/B4DH56PX/Gadd - 1947 - Observations on the Life Cycle of Xyleborus Fornic.pdf;/Users/293003c/Zotero/storage/I7CT57FU/j.1744-7348.1947.tb06355.html}
 }
 
+@article{jongejans2015,
+  title = {A Unifying Gravity Framework for Dispersal},
+  author = {Jongejans, Eelke and Skarpaas, Olav and Ferrari, Matthew J. and Long, Eric S. and Dauer, Joseph T. and Schwarz, Carrie M. and Rauschert, Emily S. J. and Jabbour, Randa and Mortensen, David A. and Isard, Scott A. and Lieb, David A. and Sezen, Zeynep and Hulting, Andrew G. and Shea, Katriona},
+  year = {2015},
+  month = may,
+  journal = {Theoretical Ecology},
+  volume = {8},
+  number = {2},
+  pages = {207--223},
+  issn = {1874-1746},
+  doi = {10.1007/s12080-014-0245-5},
+  urldate = {2024-02-09},
+  abstract = {Most organisms disperse at some life-history stage, but different research traditions to study dispersal have evolved in botany, zoology, and epidemiology. In this paper, we synthesize concepts, principles, patterns, and processes in dispersal across organisms. We suggest a consistent conceptual framework for dispersal, which utilizes generalized gravity models. This framework will facilitate communication among research traditions, guide the development of dispersal models for theoretical and applied ecology, and enable common representation across taxonomic groups, encapsulating processes at the source and destination of movement, as well as during the intervening relocation process, while allowing each of these stages in the dispersal process to be addressed separately and in relevant detail. For different research traditions, certain parts of the dispersal process are less studied than others (e.g., seed release processes in plants and termination of dispersal in terrestrial and aquatic animals). The generalized gravity model can serve as a unifying framework for such processes, because it captures the general conceptual and formal components of any dispersal process, no matter what the relevant biological timescale involved. We illustrate the use of the framework with examples of passive (a plant), active (an animal), and vectored (a fungus) dispersal, and point out promising applications, including studies of dispersal mechanisms, total dispersal kernels, and spatial population dynamics.},
+  langid = {english},
+  keywords = {Conceptual framework,Dispersal patterns and processes,Empirical and mechanistic models,Migration,Movement,Serial and parallel processes},
+  file = {/Users/293003c/Zotero/storage/UC6SJFV2/Jongejans et al. - 2015 - A unifying gravity framework for dispersal.pdf}
+}
+
 @article{rosenbaum2019,
   title = {Estimating {{Parameters From Multiple Time Series}} of {{Population Dynamics Using Bayesian Inference}}},
   author = {Rosenbaum, Benjamin and Raatz, Michael and Weithoff, Guntram and Fussmann, Gregor F. and Gaedke, Ursula},
